Urgent fix for #25691 „Work package toolbar overlapped by WP table at window width of less than 1264 pixel"
https://community.openproject.com/projects/openproject/work_packages/25691/activity

--- a/app/assets/stylesheets/layout/_work_package_mobile.sass
+++ b/app/assets/stylesheets/layout/_work_package_mobile.sass
@@ -80,7 +80,7 @@
 
     .toolbar-container
       margin-bottom: 1em
-      min-height: 0
+      min-height: 36px
 
     .attributes-key-value--key,
     .attributes-key-value--value-container
@@ -128,4 +128,3 @@
       margin: 0 !important
       padding: 8px 0 !important
       font-size: 1rem
-
